project('cpython', 'c',
  version: '3.14.0',
  license: 'PSFL',
  default_options: ['c_std=c11'],
)

cc = meson.get_compiler('c')
zlib_dep = dependency('zlib')

with_perf_trampoline = false

py_deps = [
  cc.find_library('m'),
  zlib_dep,
  dependency('expat'),
  dependency('readline'),
  dependency('sqlite3'),
  dependency('bzip2'),
  dependency('libffi'),
  dependency('liblzma'),
]

# it is a substantial piece of junk
subdir('pyconfig')
pyconfig_h = configure_file(
  output: 'pyconfig.h',
  configuration: pyconfig_data)

mod_names = [
  'atexit',
  'faulthandler',
  'posix',
  '_signal',
  '_tracemalloc',
  '_suggestions',
  '_codecs',
  '_collections',
  'errno',
  '_io',
  'itertools',
  '_sre',
  '_sysconfig',
  '_thread',
  'time',
  '_typing',
  '_weakref',
  '_abc',
  '_functools',
  '_locale',
  '_opcode',
  '_operator',
  '_stat',
  '_symtable',
  'pwd',
]

mod_fwd_decl = []
mod_table_rows = []
foreach name : mod_names
  mod_fwd_decl += f'extern PyObject* PyInit_@name@(void);'
  mod_table_rows += f'    {"@name@", PyInit_@name@},'
endforeach

sed = find_program('sed')
sh = find_program('sh')
config_c_in = meson.current_build_dir() / 'config.c.in'
marker_cmd = sed.full_path() + ' -e "s/\/\* -- ADDMODULE MARKER 1 -- \*\//@MARKER1@/g" -e "s/\/\* -- ADDMODULE MARKER 2 -- \*\//@MARKER2@/g"' + f' @0@/Modules/config.c.in > @1@'.format(meson.current_source_dir(), config_c_in)
run_command(sh, '-c', marker_cmd, check: true)

config_c = configure_file(
  input: config_c_in,
  output: 'config.c',
  configuration: {
    'MARKER1': '\n'.join(mod_fwd_decl),
    'MARKER2': '\n'.join(mod_table_rows),
  })

py_include_dirs = include_directories(
  '.',
  'Include',
  'Include/internal',
  'Include/internal/mimalloc',
  'Python',
)

py_sources = {
  'common': files(
    'Objects/abstract.c',
    'Objects/boolobject.c',
    'Objects/bytearrayobject.c',
    'Objects/bytes_methods.c',
    'Objects/bytesobject.c',
    'Objects/call.c',
    'Objects/capsule.c',
    'Objects/cellobject.c',
    'Objects/classobject.c',
    'Objects/clinic/bytearrayobject.c.h',
    'Objects/clinic/bytesobject.c.h',
    'Objects/clinic/classobject.c.h',
    'Objects/clinic/codeobject.c.h',
    'Objects/clinic/complexobject.c.h',
    'Objects/clinic/descrobject.c.h',
    'Objects/clinic/dictobject.c.h',
    'Objects/clinic/enumobject.c.h',
    'Objects/clinic/floatobject.c.h',
    'Objects/clinic/funcobject.c.h',
    'Objects/clinic/listobject.c.h',
    'Objects/clinic/longobject.c.h',
    'Objects/clinic/memoryobject.c.h',
    'Objects/clinic/moduleobject.c.h',
    'Objects/clinic/odictobject.c.h',
    'Objects/clinic/setobject.c.h',
    'Objects/clinic/structseq.c.h',
    'Objects/clinic/tupleobject.c.h',
    'Objects/clinic/typeobject.c.h',
    'Objects/clinic/typevarobject.c.h',
    'Objects/clinic/unicodeobject.c.h',
    'Objects/codeobject.c',
    'Objects/complexobject.c',
    'Objects/descrobject.c',
    'Objects/dictobject.c',
    'Objects/enumobject.c',
    'Objects/exceptions.c',
    'Objects/fileobject.c',
    'Objects/floatobject.c',
    'Objects/frameobject.c',
    'Objects/funcobject.c',
    'Objects/genericaliasobject.c',
    'Objects/genobject.c',
    'Objects/iterobject.c',
    'Objects/listobject.c',
    'Objects/longobject.c',
    'Objects/memoryobject.c',
    'Objects/methodobject.c',
    # 'Objects/mimalloc/alloc-aligned.c',
    # 'Objects/mimalloc/alloc-override.c',
    # 'Objects/mimalloc/alloc-posix.c',
    # 'Objects/mimalloc/alloc.c',
    # 'Objects/mimalloc/arena.c',
    # 'Objects/mimalloc/bitmap.c',
    # 'Objects/mimalloc/bitmap.h',
    # 'Objects/mimalloc/heap.c',
    # 'Objects/mimalloc/init.c',
    # 'Objects/mimalloc/options.c',
    # 'Objects/mimalloc/os.c',
    # 'Objects/mimalloc/page-queue.c',
    # 'Objects/mimalloc/page.c',
    # 'Objects/mimalloc/prim/osx/alloc-override-zone.c',
    # 'Objects/mimalloc/prim/osx/prim.c',
    # 'Objects/mimalloc/prim/prim.c',
    # 'Objects/mimalloc/prim/unix/prim.c',
    # 'Objects/mimalloc/prim/wasi/prim.c',
    # 'Objects/mimalloc/prim/windows/etw.h',
    # 'Objects/mimalloc/prim/windows/prim.c',
    # 'Objects/mimalloc/random.c',
    # 'Objects/mimalloc/segment-map.c',
    # 'Objects/mimalloc/segment.c',
    # 'Objects/mimalloc/static.c',
    # 'Objects/mimalloc/stats.c',
    'Objects/moduleobject.c',
    'Objects/namespaceobject.c',
    'Objects/object.c',
    'Objects/obmalloc.c',
    'Objects/odictobject.c',
    'Objects/picklebufobject.c',
    'Objects/rangeobject.c',
    'Objects/setobject.c',
    'Objects/sliceobject.c',
    'Objects/stringlib/asciilib.h',
    'Objects/stringlib/clinic/transmogrify.h.h',
    'Objects/stringlib/codecs.h',
    'Objects/stringlib/count.h',
    'Objects/stringlib/ctype.h',
    'Objects/stringlib/eq.h',
    'Objects/stringlib/fastsearch.h',
    'Objects/stringlib/find.h',
    'Objects/stringlib/find_max_char.h',
    'Objects/stringlib/join.h',
    'Objects/stringlib/localeutil.h',
    'Objects/stringlib/partition.h',
    'Objects/stringlib/replace.h',
    'Objects/stringlib/repr.h',
    'Objects/stringlib/split.h',
    'Objects/stringlib/stringdefs.h',
    'Objects/stringlib/transmogrify.h',
    'Objects/stringlib/ucs1lib.h',
    'Objects/stringlib/ucs2lib.h',
    'Objects/stringlib/ucs4lib.h',
    'Objects/stringlib/undef.h',
    'Objects/stringlib/unicode_format.h',
    'Objects/structseq.c',
    'Objects/tupleobject.c',
    'Objects/typeobject.c',
    'Objects/typevarobject.c',
    'Objects/unicodectype.c',
    'Objects/unicodeobject.c',
    'Objects/unicodetype_db.h',
    'Objects/unionobject.c',
    'Objects/weakrefobject.c',
    # 'PC/WinMain.c',
    # 'PC/_testconsole.c',
    # 'PC/clinic/_testconsole.c.h',
    # 'PC/clinic/_wmimodule.cpp.h',
    # 'PC/clinic/msvcrtmodule.c.h',
    # 'PC/clinic/winreg.c.h',
    # 'PC/clinic/winsound.c.h',
    # 'PC/config.c',
    # 'PC/config_minimal.c',
    # 'PC/dl_nt.c',
    # 'PC/errmap.h',
    # 'PC/frozen_dllmain.c',
    # 'PC/invalid_parameter_handler.c',
    # 'PC/launcher.c',
    # 'PC/launcher2.c',
    # 'PC/msvcrtmodule.c',
    # 'PC/python3dll.c',
    # 'PC/python_ver_rc.h',
    # 'PC/venvlauncher.c',
    # 'PC/winreg.c',
    # 'PC/winsound.c',
    'Parser/action_helpers.c',
    'Parser/lexer/buffer.c',
    'Parser/lexer/buffer.h',
    'Parser/lexer/lexer.c',
    'Parser/lexer/lexer.h',
    'Parser/lexer/state.c',
    'Parser/lexer/state.h',
    'Parser/myreadline.c',
    'Parser/parser.c',
    'Parser/peg_api.c',
    'Parser/pegen.c',
    'Parser/pegen.h',
    'Parser/pegen_errors.c',
    'Parser/string_parser.c',
    'Parser/string_parser.h',
    'Parser/token.c',
    'Parser/tokenizer/file_tokenizer.c',
    'Parser/tokenizer/helpers.c',
    'Parser/tokenizer/helpers.h',
    'Parser/tokenizer/readline_tokenizer.c',
    'Parser/tokenizer/string_tokenizer.c',
    'Parser/tokenizer/tokenizer.h',
    'Parser/tokenizer/utf8_tokenizer.c',
    # 'Programs/_bootstrap_python.c',
    # 'Programs/_freeze_module.c',
    # 'Programs/_testembed.c',
    # 'Programs/python.c',
    # 'Programs/test_frozenmain.h',
    'Python/Python-ast.c',
    'Python/Python-tokenize.c',
    'Python/_warnings.c',
    'Python/asdl.c',
    'Python/assemble.c',
    'Python/ast.c',
    'Python/ast_opt.c',
    'Python/ast_unparse.c',
    'Python/bltinmodule.c',
    'Python/bootstrap_hash.c',
    'Python/brc.c',
    # 'Python/bytecodes.c',
    'Python/ceval.c',
    'Python/ceval_gil.c',
    'Python/ceval_macros.h',
    'Python/clinic/Python-tokenize.c.h',
    'Python/clinic/_warnings.c.h',
    'Python/clinic/bltinmodule.c.h',
    'Python/clinic/context.c.h',
    'Python/clinic/import.c.h',
    'Python/clinic/instruction_sequence.c.h',
    'Python/clinic/instrumentation.c.h',
    'Python/clinic/marshal.c.h',
    'Python/clinic/sysmodule.c.h',
    'Python/clinic/traceback.c.h',
    'Python/codecs.c',
    'Python/codegen.c',
    'Python/compile.c',
    'Python/condvar.h',
    'Python/config_common.h',
    'Python/context.c',
    'Python/critical_section.c',
    'Python/crossinterp.c',
    'Python/crossinterp_data_lookup.h',
    'Python/crossinterp_exceptions.h',
    'Python/dtoa.c',
    'Python/dup2.c',
    'Python/dynamic_annotations.c',
    # 'Python/dynload_hpux.c',
    'Python/dynload_shlib.c',
    # 'Python/dynload_stub.c',
    # 'Python/dynload_win.c',
    # 'Python/emscripten_signal.c',
    # 'Python/emscripten_trampoline.c',
    'Python/errors.c',
    'Python/executor_cases.c.h',
    'Python/fileutils.c',
    'Python/flowgraph.c',
    'Python/formatter_unicode.c',
    'Python/frame.c',
    # 'Python/frozen.c',
    # 'Python/frozenmain.c',
    'Python/future.c',
    'Python/gc.c',
    'Python/gc_free_threading.c',
    'Python/gc_gil.c',
    'Python/generated_cases.c.h',
    'Python/getargs.c',
    'Python/getcompiler.c',
    'Python/getcopyright.c',
    'Python/getopt.c',
    'Python/getplatform.c',
    'Python/getversion.c',
    'Python/hamt.c',
    'Python/hashtable.c',
    'Python/import.c',
    'Python/importdl.c',
    'Python/index_pool.c',
    'Python/initconfig.c',
    'Python/instruction_sequence.c',
    'Python/instrumentation.c',
    'Python/interpconfig.c',
    'Python/intrinsics.c',
    'Python/jit.c',
    'Python/legacy_tracing.c',
    'Python/lock.c',
    'Python/marshal.c',
    'Python/modsupport.c',
    'Python/mysnprintf.c',
    'Python/mystrtoul.c',
    'Python/object_stack.c',
    'Python/opcode_targets.h',
    'Python/optimizer.c',
    'Python/optimizer_analysis.c',
    # 'Python/optimizer_bytecodes.c',
    'Python/optimizer_cases.c.h',
    'Python/optimizer_symbols.c',
    'Python/parking_lot.c',
    'Python/pathconfig.c',
    'Python/perf_jit_trampoline.c',
    'Python/perf_trampoline.c',
    'Python/preconfig.c',
    'Python/pyarena.c',
    'Python/pyctype.c',
    'Python/pyfpe.c',
    'Python/pyhash.c',
    'Python/pylifecycle.c',
    'Python/pymath.c',
    'Python/pystate.c',
    'Python/pystrcmp.c',
    'Python/pystrhex.c',
    'Python/pystrtod.c',
    'Python/pythonrun.c',
    'Python/pytime.c',
    'Python/qsbr.c',
    'Python/specialize.c',
    'Python/stdlib_module_names.h',
    'Python/structmember.c',
    'Python/suggestions.c',
    'Python/symtable.c',
    'Python/sysmodule.c',
    'Python/thread.c',
    'Python/thread_nt.h',
    'Python/thread_pthread.h',
    'Python/thread_pthread_stubs.h',
    'Python/traceback.c',
    'Python/tracemalloc.c',
    'Python/uniqueid.c',

    with_perf_trampoline ? ['Python/asm_trampoline.S'] : [],

    'Modules/_abc.c',
    'Modules/_asynciomodule.c',
    'Modules/_bisectmodule.c',
    'Modules/_bz2module.c',
    'Modules/_codecsmodule.c',
    'Modules/_collectionsmodule.c',
    'Modules/_complex.h',
    'Modules/_contextvarsmodule.c',
    'Modules/_csv.c',
    'Modules/_ctypes/_ctypes.c',
    # 'Modules/_ctypes/_ctypes_test.c',
    # 'Modules/_ctypes/_ctypes_test.h',
    # 'Modules/_ctypes/_ctypes_test_generated.c.h',
    'Modules/_ctypes/callbacks.c',
    'Modules/_ctypes/callproc.c',
    'Modules/_ctypes/cfield.c',
    'Modules/_ctypes/clinic/_ctypes.c.h',
    'Modules/_ctypes/clinic/callproc.c.h',
    'Modules/_ctypes/clinic/cfield.c.h',
    'Modules/_ctypes/ctypes.h',
    'Modules/_ctypes/malloc_closure.c',
    'Modules/_ctypes/stgdict.c',
    # 'Modules/_curses_panel.c',
    # 'Modules/_cursesmodule.c',
    'Modules/_datetimemodule.c',
    # 'Modules/_dbmmodule.c',
    # 'Modules/_decimal/_decimal.c',
    # 'Modules/_decimal/docstrings.h',
    # 'Modules/_decimal/libmpdec/basearith.c',
    # 'Modules/_decimal/libmpdec/basearith.h',
    # 'Modules/_decimal/libmpdec/bench.c',
    # 'Modules/_decimal/libmpdec/bench_full.c',
    # 'Modules/_decimal/libmpdec/bits.h',
    # 'Modules/_decimal/libmpdec/constants.c',
    # 'Modules/_decimal/libmpdec/constants.h',
    # 'Modules/_decimal/libmpdec/context.c',
    # 'Modules/_decimal/libmpdec/convolute.c',
    # 'Modules/_decimal/libmpdec/convolute.h',
    # 'Modules/_decimal/libmpdec/crt.c',
    # 'Modules/_decimal/libmpdec/crt.h',
    # 'Modules/_decimal/libmpdec/difradix2.c',
    # 'Modules/_decimal/libmpdec/difradix2.h',
    # 'Modules/_decimal/libmpdec/examples/compare.c',
    # 'Modules/_decimal/libmpdec/examples/div.c',
    # 'Modules/_decimal/libmpdec/examples/divmod.c',
    # 'Modules/_decimal/libmpdec/examples/multiply.c',
    # 'Modules/_decimal/libmpdec/examples/pow.c',
    # 'Modules/_decimal/libmpdec/examples/powmod.c',
    # 'Modules/_decimal/libmpdec/examples/shift.c',
    # 'Modules/_decimal/libmpdec/examples/sqrt.c',
    # 'Modules/_decimal/libmpdec/fnt.c',
    # 'Modules/_decimal/libmpdec/fnt.h',
    # 'Modules/_decimal/libmpdec/fourstep.c',
    # 'Modules/_decimal/libmpdec/fourstep.h',
    # 'Modules/_decimal/libmpdec/io.c',
    # 'Modules/_decimal/libmpdec/io.h',
    # 'Modules/_decimal/libmpdec/mpalloc.c',
    # 'Modules/_decimal/libmpdec/mpalloc.h',
    # 'Modules/_decimal/libmpdec/mpdecimal.c',
    # 'Modules/_decimal/libmpdec/mpdecimal.h',
    # 'Modules/_decimal/libmpdec/mpsignal.c',
    # 'Modules/_decimal/libmpdec/numbertheory.c',
    # 'Modules/_decimal/libmpdec/numbertheory.h',
    # 'Modules/_decimal/libmpdec/sixstep.c',
    # 'Modules/_decimal/libmpdec/sixstep.h',
    # 'Modules/_decimal/libmpdec/transpose.c',
    # 'Modules/_decimal/libmpdec/transpose.h',
    # 'Modules/_decimal/libmpdec/typearith.h',
    # 'Modules/_decimal/libmpdec/umodarith.h',
    # 'Modules/_decimal/windows/mpdecimal.h',
    'Modules/_elementtree.c',
    'Modules/_functoolsmodule.c',
    # 'Modules/_gdbmmodule.c',
    # 'Modules/_hacl/Hacl_Hash_Blake2b.c',
    # 'Modules/_hacl/Hacl_Hash_Blake2b.h',
    # 'Modules/_hacl/Hacl_Hash_Blake2b_Simd256.c',
    # 'Modules/_hacl/Hacl_Hash_Blake2b_Simd256.h',
    # 'Modules/_hacl/Hacl_Hash_Blake2b_Simd256_universal2.c',
    # 'Modules/_hacl/Hacl_Hash_Blake2s.c',
    # 'Modules/_hacl/Hacl_Hash_Blake2s.h',
    # 'Modules/_hacl/Hacl_Hash_Blake2s_Simd128.c',
    # 'Modules/_hacl/Hacl_Hash_Blake2s_Simd128.h',
    # 'Modules/_hacl/Hacl_Hash_Blake2s_Simd128_universal2.c',
    # 'Modules/_hacl/Hacl_Hash_MD5.c',
    # 'Modules/_hacl/Hacl_Hash_MD5.h',
    # 'Modules/_hacl/Hacl_Hash_SHA1.c',
    # 'Modules/_hacl/Hacl_Hash_SHA1.h',
    # 'Modules/_hacl/Hacl_Hash_SHA2.c',
    # 'Modules/_hacl/Hacl_Hash_SHA2.h',
    # 'Modules/_hacl/Hacl_Hash_SHA3.c',
    # 'Modules/_hacl/Hacl_Hash_SHA3.h',
    # 'Modules/_hacl/Hacl_Streaming_Types.h',
    # 'Modules/_hacl/Lib_Memzero0.c',
    # 'Modules/_hacl/include/krml/FStar_UInt128_Verified.h',
    # 'Modules/_hacl/include/krml/FStar_UInt_8_16_32_64.h',
    # 'Modules/_hacl/include/krml/fstar_uint128_struct_endianness.h',
    # 'Modules/_hacl/include/krml/internal/target.h',
    # 'Modules/_hacl/include/krml/lowstar_endianness.h',
    # 'Modules/_hacl/include/krml/types.h',
    # 'Modules/_hacl/internal/Hacl_Hash_Blake2b.h',
    # 'Modules/_hacl/internal/Hacl_Hash_Blake2b_Simd256.h',
    # 'Modules/_hacl/internal/Hacl_Hash_Blake2s.h',
    # 'Modules/_hacl/internal/Hacl_Hash_Blake2s_Simd128.h',
    # 'Modules/_hacl/internal/Hacl_Hash_MD5.h',
    # 'Modules/_hacl/internal/Hacl_Hash_SHA1.h',
    # 'Modules/_hacl/internal/Hacl_Hash_SHA2.h',
    # 'Modules/_hacl/internal/Hacl_Hash_SHA3.h',
    # 'Modules/_hacl/internal/Hacl_Impl_Blake2_Constants.h',
    # 'Modules/_hacl/lib_memzero0.h',
    # 'Modules/_hacl/libintvector.h',
    # 'Modules/_hacl/python_hacl_namespaces.h',
    # 'Modules/_hashopenssl.c',
    'Modules/_heapqmodule.c',
    'Modules/_interpchannelsmodule.c',
    'Modules/_interpqueuesmodule.c',
    'Modules/_interpreters_common.h',
    'Modules/_interpretersmodule.c',
    'Modules/_io/_iomodule.c',
    'Modules/_io/_iomodule.h',
    'Modules/_io/bufferedio.c',
    'Modules/_io/bytesio.c',
    'Modules/_io/clinic/_iomodule.c.h',
    'Modules/_io/clinic/bufferedio.c.h',
    'Modules/_io/clinic/bytesio.c.h',
    'Modules/_io/clinic/fileio.c.h',
    'Modules/_io/clinic/iobase.c.h',
    'Modules/_io/clinic/stringio.c.h',
    'Modules/_io/clinic/textio.c.h',
    'Modules/_io/clinic/winconsoleio.c.h',
    'Modules/_io/fileio.c',
    'Modules/_io/iobase.c',
    'Modules/_io/stringio.c',
    'Modules/_io/textio.c',
    'Modules/_io/winconsoleio.c',
    'Modules/_json.c',
    'Modules/_localemodule.c',
    'Modules/_lsprof.c',
    'Modules/_lzmamodule.c',
    'Modules/_math.h',
    'Modules/_multiprocessing/clinic/multiprocessing.c.h',
    'Modules/_multiprocessing/clinic/posixshmem.c.h',
    'Modules/_multiprocessing/clinic/semaphore.c.h',
    'Modules/_multiprocessing/multiprocessing.c',
    'Modules/_multiprocessing/multiprocessing.h',
    'Modules/_multiprocessing/posixshmem.c',
    'Modules/_multiprocessing/semaphore.c',
    'Modules/_opcode.c',
    'Modules/_operator.c',
    'Modules/_pickle.c',
    'Modules/_posixsubprocess.c',
    'Modules/_queuemodule.c',
    'Modules/_randommodule.c',
    # 'Modules/_scproxy.c',
    'Modules/_sqlite/blob.c',
    'Modules/_sqlite/blob.h',
    'Modules/_sqlite/clinic/_sqlite3.connect.c.h',
    'Modules/_sqlite/clinic/blob.c.h',
    'Modules/_sqlite/clinic/connection.c.h',
    'Modules/_sqlite/clinic/cursor.c.h',
    'Modules/_sqlite/clinic/module.c.h',
    'Modules/_sqlite/clinic/row.c.h',
    'Modules/_sqlite/connection.c',
    'Modules/_sqlite/connection.h',
    'Modules/_sqlite/cursor.c',
    'Modules/_sqlite/cursor.h',
    'Modules/_sqlite/microprotocols.c',
    'Modules/_sqlite/microprotocols.h',
    'Modules/_sqlite/module.c',
    'Modules/_sqlite/module.h',
    'Modules/_sqlite/prepare_protocol.c',
    'Modules/_sqlite/prepare_protocol.h',
    'Modules/_sqlite/row.c',
    'Modules/_sqlite/row.h',
    'Modules/_sqlite/statement.c',
    'Modules/_sqlite/statement.h',
    'Modules/_sqlite/util.c',
    'Modules/_sqlite/util.h',
    'Modules/_sre/clinic/sre.c.h',
    'Modules/_sre/sre.c',
    'Modules/_sre/sre.h',
    'Modules/_sre/sre_constants.h',
    'Modules/_sre/sre_lib.h',
    'Modules/_sre/sre_targets.h',
    # 'Modules/_ssl.c',
    # 'Modules/_ssl.h',
    # 'Modules/_ssl/cert.c',
    # 'Modules/_ssl/clinic/cert.c.h',
    # 'Modules/_ssl/debughelpers.c',
    # 'Modules/_ssl/misc.c',
    # 'Modules/_ssl_data_111.h',
    # 'Modules/_ssl_data_300.h',
    # 'Modules/_ssl_data_34.h',
    'Modules/_stat.c',
    'Modules/_statisticsmodule.c',
    'Modules/_struct.c',
    'Modules/_suggestions.c',
    'Modules/_sysconfig.c',
    # 'Modules/_testbuffer.c',
    # 'Modules/_testcapi/abstract.c',
    # 'Modules/_testcapi/buffer.c',
    # 'Modules/_testcapi/bytes.c',
    # 'Modules/_testcapi/clinic/exceptions.c.h',
    # 'Modules/_testcapi/clinic/float.c.h',
    # 'Modules/_testcapi/clinic/long.c.h',
    # 'Modules/_testcapi/clinic/vectorcall.c.h',
    # 'Modules/_testcapi/clinic/watchers.c.h',
    # 'Modules/_testcapi/code.c',
    # 'Modules/_testcapi/codec.c',
    # 'Modules/_testcapi/complex.c',
    # 'Modules/_testcapi/config.c',
    # 'Modules/_testcapi/datetime.c',
    # 'Modules/_testcapi/dict.c',
    # 'Modules/_testcapi/docstring.c',
    # 'Modules/_testcapi/exceptions.c',
    # 'Modules/_testcapi/file.c',
    # 'Modules/_testcapi/float.c',
    # 'Modules/_testcapi/gc.c',
    # 'Modules/_testcapi/getargs.c',
    # 'Modules/_testcapi/hash.c',
    # 'Modules/_testcapi/heaptype.c',
    # 'Modules/_testcapi/immortal.c',
    # 'Modules/_testcapi/list.c',
    # 'Modules/_testcapi/long.c',
    # 'Modules/_testcapi/mem.c',
    # 'Modules/_testcapi/monitoring.c',
    # 'Modules/_testcapi/numbers.c',
    # 'Modules/_testcapi/object.c',
    # 'Modules/_testcapi/parts.h',
    # 'Modules/_testcapi/pyatomic.c',
    # 'Modules/_testcapi/run.c',
    # 'Modules/_testcapi/set.c',
    # 'Modules/_testcapi/structmember.c',
    # 'Modules/_testcapi/time.c',
    # 'Modules/_testcapi/tuple.c',
    # 'Modules/_testcapi/unicode.c',
    # 'Modules/_testcapi/util.h',
    # 'Modules/_testcapi/vectorcall.c',
    # 'Modules/_testcapi/watchers.c',
    # 'Modules/_testcapimodule.c',
    # 'Modules/_testclinic.c',
    # 'Modules/_testclinic_limited.c',
    # 'Modules/_testexternalinspection.c',
    # 'Modules/_testimportmultiple.c',
    # 'Modules/_testinternalcapi.c',
    # 'Modules/_testinternalcapi/clinic/test_lock.c.h',
    # 'Modules/_testinternalcapi/parts.h',
    # 'Modules/_testinternalcapi/pytime.c',
    # 'Modules/_testinternalcapi/set.c',
    # 'Modules/_testinternalcapi/test_critical_sections.c',
    # 'Modules/_testinternalcapi/test_lock.c',
    # 'Modules/_testlimitedcapi.c',
    # 'Modules/_testlimitedcapi/abstract.c',
    # 'Modules/_testlimitedcapi/bytearray.c',
    # 'Modules/_testlimitedcapi/bytes.c',
    # 'Modules/_testlimitedcapi/clinic/heaptype_relative.c.h',
    # 'Modules/_testlimitedcapi/clinic/long.c.h',
    # 'Modules/_testlimitedcapi/clinic/vectorcall_limited.c.h',
    # 'Modules/_testlimitedcapi/codec.c',
    # 'Modules/_testlimitedcapi/complex.c',
    # 'Modules/_testlimitedcapi/dict.c',
    # 'Modules/_testlimitedcapi/eval.c',
    # 'Modules/_testlimitedcapi/float.c',
    # 'Modules/_testlimitedcapi/heaptype_relative.c',
    # 'Modules/_testlimitedcapi/list.c',
    # 'Modules/_testlimitedcapi/long.c',
    # 'Modules/_testlimitedcapi/object.c',
    # 'Modules/_testlimitedcapi/parts.h',
    # 'Modules/_testlimitedcapi/pyos.c',
    # 'Modules/_testlimitedcapi/set.c',
    # 'Modules/_testlimitedcapi/sys.c',
    # 'Modules/_testlimitedcapi/testcapi_long.h',
    # 'Modules/_testlimitedcapi/tuple.c',
    # 'Modules/_testlimitedcapi/unicode.c',
    # 'Modules/_testlimitedcapi/util.h',
    # 'Modules/_testlimitedcapi/vectorcall_limited.c',
    # 'Modules/_testmultiphase.c',
    # 'Modules/_testsinglephase.c',
    'Modules/_threadmodule.c',
    # 'Modules/_tkinter.c',
    'Modules/_tracemalloc.c',
    'Modules/_typingmodule.c',
    # 'Modules/_uuidmodule.c',
    'Modules/_weakref.c',
    # 'Modules/_winapi.c',
    # 'Modules/_xxtestfuzz/_xxtestfuzz.c',
    # 'Modules/_xxtestfuzz/fuzzer.c',
    'Modules/_zoneinfo.c',
    'Modules/addrinfo.h',
    'Modules/arraymodule.c',
    'Modules/atexitmodule.c',
    'Modules/binascii.c',
    # 'Modules/blake2module.c',
    # 'Modules/cjkcodecs/_codecs_cn.c',
    # 'Modules/cjkcodecs/_codecs_hk.c',
    # 'Modules/cjkcodecs/_codecs_iso2022.c',
    # 'Modules/cjkcodecs/_codecs_jp.c',
    # 'Modules/cjkcodecs/_codecs_kr.c',
    # 'Modules/cjkcodecs/_codecs_tw.c',
    # 'Modules/cjkcodecs/alg_jisx0201.h',
    # 'Modules/cjkcodecs/cjkcodecs.h',
    # 'Modules/cjkcodecs/clinic/multibytecodec.c.h',
    # 'Modules/cjkcodecs/emu_jisx0213_2000.h',
    # 'Modules/cjkcodecs/mappings_cn.h',
    # 'Modules/cjkcodecs/mappings_hk.h',
    # 'Modules/cjkcodecs/mappings_jisx0213_pair.h',
    # 'Modules/cjkcodecs/mappings_jp.h',
    # 'Modules/cjkcodecs/mappings_kr.h',
    # 'Modules/cjkcodecs/mappings_tw.h',
    # 'Modules/cjkcodecs/multibytecodec.c',
    # 'Modules/cjkcodecs/multibytecodec.h',
    # 'Modules/clinic/_abc.c.h',
    # 'Modules/clinic/_asynciomodule.c.h',
    # 'Modules/clinic/_bisectmodule.c.h',
    # 'Modules/clinic/_bz2module.c.h',
    # 'Modules/clinic/_codecsmodule.c.h',
    # 'Modules/clinic/_collectionsmodule.c.h',
    # 'Modules/clinic/_contextvarsmodule.c.h',
    # 'Modules/clinic/_csv.c.h',
    # 'Modules/clinic/_curses_panel.c.h',
    # 'Modules/clinic/_cursesmodule.c.h',
    # 'Modules/clinic/_datetimemodule.c.h',
    # 'Modules/clinic/_dbmmodule.c.h',
    # 'Modules/clinic/_elementtree.c.h',
    # 'Modules/clinic/_functoolsmodule.c.h',
    # 'Modules/clinic/_gdbmmodule.c.h',
    # 'Modules/clinic/_hashopenssl.c.h',
    # 'Modules/clinic/_heapqmodule.c.h',
    # 'Modules/clinic/_localemodule.c.h',
    # 'Modules/clinic/_lsprof.c.h',
    # 'Modules/clinic/_lzmamodule.c.h',
    # 'Modules/clinic/_opcode.c.h',
    # 'Modules/clinic/_operator.c.h',
    # 'Modules/clinic/_pickle.c.h',
    'Modules/clinic/_posixsubprocess.c.h',
    # 'Modules/clinic/_queuemodule.c.h',
    # 'Modules/clinic/_randommodule.c.h',
    # 'Modules/clinic/_ssl.c.h',
    # 'Modules/clinic/_statisticsmodule.c.h',
    # 'Modules/clinic/_struct.c.h',
    # 'Modules/clinic/_suggestions.c.h',
    # 'Modules/clinic/_sysconfig.c.h',
    # 'Modules/clinic/_testclinic.c.h',
    # 'Modules/clinic/_testclinic_depr.c.h',
    # 'Modules/clinic/_testclinic_limited.c.h',
    # 'Modules/clinic/_testinternalcapi.c.h',
    # 'Modules/clinic/_testmultiphase.c.h',
    # 'Modules/clinic/_threadmodule.c.h',
    # 'Modules/clinic/_tkinter.c.h',
    # 'Modules/clinic/_tracemalloc.c.h',
    # 'Modules/clinic/_typingmodule.c.h',
    # 'Modules/clinic/_weakref.c.h',
    # 'Modules/clinic/_winapi.c.h',
    # 'Modules/clinic/_zoneinfo.c.h',
    # 'Modules/clinic/arraymodule.c.h',
    # 'Modules/clinic/binascii.c.h',
    # 'Modules/clinic/blake2module.c.h',
    # 'Modules/clinic/cmathmodule.c.h',
    # 'Modules/clinic/fcntlmodule.c.h',
    # 'Modules/clinic/gcmodule.c.h',
    # 'Modules/clinic/grpmodule.c.h',
    # 'Modules/clinic/itertoolsmodule.c.h',
    # 'Modules/clinic/mathmodule.c.h',
    # 'Modules/clinic/md5module.c.h',
    # 'Modules/clinic/overlapped.c.h',
    # 'Modules/clinic/posixmodule.c.h',
    # 'Modules/clinic/pwdmodule.c.h',
    # 'Modules/clinic/pyexpat.c.h',
    # 'Modules/clinic/readline.c.h',
    # 'Modules/clinic/resource.c.h',
    # 'Modules/clinic/selectmodule.c.h',
    # 'Modules/clinic/sha1module.c.h',
    # 'Modules/clinic/sha2module.c.h',
    # 'Modules/clinic/sha3module.c.h',
    # 'Modules/clinic/signalmodule.c.h',
    # 'Modules/clinic/socketmodule.c.h',
    # 'Modules/clinic/symtablemodule.c.h',
    # 'Modules/clinic/syslogmodule.c.h',
    # 'Modules/clinic/termios.c.h',
    # 'Modules/clinic/timemodule.c.h',
    # 'Modules/clinic/unicodedata.c.h',
    # 'Modules/clinic/zlibmodule.c.h',
    'Modules/cmathmodule.c',
    'Modules/errnomodule.c',
    # 'Modules/expat/ascii.h',
    # 'Modules/expat/asciitab.h',
    # 'Modules/expat/expat.h',
    # 'Modules/expat/expat_config.h',
    # 'Modules/expat/expat_external.h',
    # 'Modules/expat/iasciitab.h',
    # 'Modules/expat/internal.h',
    # 'Modules/expat/latin1tab.h',
    # 'Modules/expat/nametab.h',
    # 'Modules/expat/pyexpatns.h',
    # 'Modules/expat/siphash.h',
    # 'Modules/expat/utf8tab.h',
    # 'Modules/expat/winconfig.h',
    # 'Modules/expat/xmlparse.c',
    # 'Modules/expat/xmlrole.c',
    # 'Modules/expat/xmlrole.h',
    # 'Modules/expat/xmltok.c',
    # 'Modules/expat/xmltok.h',
    # 'Modules/expat/xmltok_impl.c',
    # 'Modules/expat/xmltok_impl.h',
    # 'Modules/expat/xmltok_ns.c',
    'Modules/faulthandler.c',
    'Modules/fcntlmodule.c',
    'Modules/gcmodule.c',
    'Modules/getaddrinfo.c',
    'Modules/getbuildinfo.c',
    'Modules/getnameinfo.c',
    # 'Modules/getpath.c',
    # 'Modules/getpath_noop.c',
    'Modules/grpmodule.c',
    'Modules/hashlib.h',
    'Modules/itertoolsmodule.c',
    # 'Modules/main.c',
    'Modules/mathmodule.c',
    # 'Modules/md5module.c',
    'Modules/mmapmodule.c',
    # 'Modules/overlapped.c',
    'Modules/posixmodule.c',
    'Modules/posixmodule.h',
    'Modules/pwdmodule.c',
    'Modules/pyexpat.c',
    'Modules/readline.c',
    'Modules/resource.c',
    'Modules/rotatingtree.c',
    'Modules/rotatingtree.h',
    'Modules/selectmodule.c',
    # 'Modules/sha1module.c',
    # 'Modules/sha2module.c',
    # 'Modules/sha3module.c',
    'Modules/signalmodule.c',
    'Modules/socketmodule.c',
    'Modules/socketmodule.h',
    'Modules/symtablemodule.c',
    'Modules/syslogmodule.c',
    'Modules/termios.c',
    'Modules/timemodule.c',
    # 'Modules/tkappinit.c',
    # 'Modules/tkinter.h',
    'Modules/unicodedata.c',
    'Modules/unicodedata_db.h',
    'Modules/unicodename_db.h',
    'Modules/winreparse.h',
    'Modules/xxlimited.c',
    'Modules/xxlimited_35.c',
    'Modules/xxmodule.c',
    'Modules/xxsubtype.c',
    'Modules/zlibmodule.c',
  ),
}

py_c_args = [
  '-DPy_BUILD_CORE',
  '-DPy_ENABLE_SHARED',
  '-DSOABI="cpython-314-x86_64-linux-gnu"',

  '-Wno-macro-redefined', # annoying macos warnings #fixme

  '-DUSING_APPLE_OS_LIBFFI=@0@'.format(is_darwin.to_int()),
]

# common sources between helper tools and primary targets
libpy3_base = static_library('py3-base',
  sources: [py_sources['common'], pyconfig_h],
  include_directories: py_include_dirs,
  c_args: py_c_args,
  dependencies: py_deps,
  install: false)

py3_base_dep = declare_dependency(
  link_with: libpy3_base,
  sources: pyconfig_h)

_freeze_module = executable('_freeze_module',
  sources: [
    'Programs/_freeze_module.c',
    'Modules/getpath_noop.c',
    config_c,
  ],
  include_directories: py_include_dirs,
  c_args: py_c_args,
  dependencies: [py_deps, py3_base_dep])

subdir('Python/frozen_modules')

libgetpath = static_library('python3-getpath',
  sources: [
    'Modules/getpath.c',
    freeze_module_targets,
  ],
  include_directories: py_include_dirs,
  c_args: [
    py_c_args,
    '-DPREFIX="/usr/local"',
    '-DEXEC_PREFIX="/usr/local"',
    '-DVERSION="@0@"'.format(meson.project_version()),
    '-DPLATLIBDIR="lib"',
    '-DVPATH=""',
  ])

libpython = library('python3',
  sources: [
    'Python/frozen.c',
    config_c,
    freeze_module_targets,
  ],
  include_directories: py_include_dirs,
  c_args: py_c_args,
  dependencies: [py_deps, py3_base_dep],
  link_with: libgetpath,
  install: true,
  version: meson.project_version(),
  soversion: '3')

python3_dep = declare_dependency(
  include_directories: include_directories('Include'),
  link_with: libpython)

python3 = executable('python3',
  sources: files(
    'Programs/python.c',
    'Modules/main.c',
  ),
  c_args: py_c_args,
  include_directories: py_include_dirs,
  dependencies: python3_dep,
  install: true)

zip = find_program('zip')
python_lib_zip = custom_target('python-lib-zip',
  output: 'python@0@.zip'.format(meson.project_version()),
  command: [zip, '-FSr', '@OUTPUT@', meson.current_source_dir() / 'Lib'],
  build_always_stale: true)
