
pyconfig_data = configuration_data({
  'ALIGNOF_LONG': 8,
  'ALIGNOF_MAX_ALIGN_T': 16,
  'ALIGNOF_SIZE_T': 8,
  'DOUBLE_IS_LITTLE_ENDIAN_IEEE754': 1,
  'ENABLE_IPV6': 1,
  'HACL_CAN_COMPILE_SIMD128': 1,
  'HACL_CAN_COMPILE_SIMD256': 1,
  'HAVE_ACCEPT': 1,
  # 'HAVE_ACCEPT4': 1,
  'HAVE_ACOSH': 1,
  'HAVE_ADDRINFO': 1,
  'HAVE_ALARM': 1,
  'HAVE_ALLOCA_H': 1,
  'HAVE_ASINH': 1,
  'HAVE_ASM_TYPES_H': 1,
  'HAVE_ATANH': 1,
  'HAVE_BIND': 1,
  'HAVE_BIND_TEXTDOMAIN_CODESET': 1,
  'HAVE_BLUETOOTH_BLUETOOTH_H': 1,
  'HAVE_BUILTIN_ATOMIC': 1,
  'HAVE_CHMOD': 1,
  'HAVE_CHOWN': 1,
  'HAVE_CHROOT': 1,
  'HAVE_CLOCK': 1,
  'HAVE_CLOCK_GETRES': 1,
  'HAVE_CLOCK_GETTIME': 1,
  'HAVE_CLOCK_NANOSLEEP': 1,
  'HAVE_CLOCK_SETTIME': 1,
  'HAVE_CLOCK_T': 1,
  'HAVE_CLOSEFROM': 1,
  # 'HAVE_CLOSE_RANGE': 1,
  'HAVE_COMPUTED_GOTOS': 1,
  'HAVE_CONFSTR': 1,
  'HAVE_CONNECT': 1,
  # 'HAVE_COPY_FILE_RANGE': 1,
  'HAVE_CTERMID': 1,
  'HAVE_CURSES_FILTER': 1,
  'HAVE_CURSES_H': 1,
  'HAVE_CURSES_HAS_KEY': 1,
  'HAVE_CURSES_IMMEDOK': 1,
  'HAVE_CURSES_IS_PAD': 1,
  'HAVE_CURSES_IS_TERM_RESIZED': 1,
  'HAVE_CURSES_RESIZETERM': 1,
  'HAVE_CURSES_RESIZE_TERM': 1,
  'HAVE_CURSES_SYNCOK': 1,
  'HAVE_CURSES_TYPEAHEAD': 1,
  'HAVE_CURSES_USE_ENV': 1,
  'HAVE_CURSES_WCHGAT': 1,
  'HAVE_DB_H': 1,
  'HAVE_DECL_RTLD_DEEPBIND': 1,
  'HAVE_DECL_RTLD_GLOBAL': 1,
  'HAVE_DECL_RTLD_LAZY': 1,
  'HAVE_DECL_RTLD_LOCAL': 1,
  'HAVE_DECL_RTLD_MEMBER': 0,
  'HAVE_DECL_RTLD_NODELETE': 1,
  'HAVE_DECL_RTLD_NOLOAD': 1,
  'HAVE_DECL_RTLD_NOW': 1,
  'HAVE_DEVICE_MACROS': 1,
  'HAVE_DEV_PTMX': 1,
  'HAVE_DIRENT_D_TYPE': 1,
  'HAVE_DIRENT_H': 1,
  'HAVE_DIRFD': 1,
  'HAVE_DLFCN_H': 1,
  'HAVE_DLOPEN': 1,
  'HAVE_DUP': 1,
  'HAVE_DUP2': 1,
  # 'HAVE_DUP3': 1,
  'HAVE_DYNAMIC_LOADING': 1,
  'HAVE_ENDIAN_H': 1,
  'HAVE_EPOLL': 1,
  'HAVE_EPOLL_CREATE1': 1,
  'HAVE_ERF': 1,
  'HAVE_ERFC': 1,
  'HAVE_ERRNO_H': 1,
  'HAVE_EVENTFD': 1,
  'HAVE_EXECV': 1,
  'HAVE_EXPLICIT_BZERO': 1,
  'HAVE_EXPM1': 1,
  'HAVE_FACCESSAT': 1,
  'HAVE_FCHDIR': 1,
  'HAVE_FCHMOD': 1,
  'HAVE_FCHMODAT': 1,
  'HAVE_FCHOWN': 1,
  'HAVE_FCHOWNAT': 1,
  'HAVE_FCNTL_H': 1,
  'HAVE_FDATASYNC': 1,
  'HAVE_FDOPENDIR': 1,
  'HAVE_FEXECVE': 1,
  'HAVE_FFI_CLOSURE_ALLOC': 1,
  'HAVE_FFI_PREP_CIF_VAR': 1,
  'HAVE_FFI_PREP_CLOSURE_LOC': 1,
  'HAVE_FLOCK': 1,
  'HAVE_FORK': 1,
  'HAVE_FORKPTY': 1,
  'HAVE_FPATHCONF': 1,
  'HAVE_FSEEKO': 1,
  'HAVE_FSTATAT': 1,
  'HAVE_FSTATVFS': 1,
  'HAVE_FSYNC': 1,
  'HAVE_FTELLO': 1,
  'HAVE_FTIME': 1,
  'HAVE_FTRUNCATE': 1,
  'HAVE_FUTIMENS': 1,
  'HAVE_FUTIMES': 1,
  'HAVE_FUTIMESAT': 1,
  'HAVE_GAI_STRERROR': 1,
  'HAVE_GCC_ASM_FOR_X64': 1,
  'HAVE_GCC_ASM_FOR_X87': 1,
  'HAVE_GCC_UINT128_T': 1,
  'HAVE_GDBM_H': 1,
  'HAVE_GETADDRINFO': 1,
  'HAVE_GETC_UNLOCKED': 1,
  'HAVE_GETEGID': 1,
  'HAVE_GETENTROPY': 1,
  'HAVE_GETEUID': 1,
  'HAVE_GETGID': 1,
  'HAVE_GETGRENT': 1,
  'HAVE_GETGRGID': 1,
  'HAVE_GETGRGID_R': 1,
  'HAVE_GETGRNAM_R': 1,
  'HAVE_GETGROUPLIST': 1,
  'HAVE_GETGROUPS': 1,
  'HAVE_GETHOSTBYADDR': 1,
  'HAVE_GETHOSTBYNAME': 1,
  'HAVE_GETHOSTBYNAME_R': 1,
  'HAVE_GETHOSTBYNAME_R_6_ARG': 1,
  'HAVE_GETHOSTNAME': 1,
  'HAVE_GETITIMER': 1,
  'HAVE_GETLOADAVG': 1,
  'HAVE_GETLOGIN': 1,
  'HAVE_GETNAMEINFO': 1,
  'HAVE_GETPAGESIZE': 1,
  'HAVE_GETPEERNAME': 1,
  'HAVE_GETPGID': 1,
  'HAVE_GETPGRP': 1,
  'HAVE_GETPID': 1,
  'HAVE_GETPPID': 1,
  'HAVE_GETPRIORITY': 1,
  'HAVE_GETPROTOBYNAME': 1,
  'HAVE_GETPWENT': 1,
  'HAVE_GETPWNAM_R': 1,
  'HAVE_GETPWUID': 1,
  'HAVE_GETPWUID_R': 1,
  'HAVE_GETRANDOM': 1,
  'HAVE_GETRANDOM_SYSCALL': 1,
  # 'HAVE_GETRESGID': 1,
  # 'HAVE_GETRESUID': 1,
  'HAVE_GETRUSAGE': 1,
  'HAVE_GETSERVBYNAME': 1,
  'HAVE_GETSERVBYPORT': 1,
  'HAVE_GETSID': 1,
  'HAVE_GETSOCKNAME': 1,
  'HAVE_GETSPENT': 1,
  'HAVE_GETSPNAM': 1,
  'HAVE_GETUID': 1,
  'HAVE_GETWD': 1,
  'HAVE_GRANTPT': 1,
  'HAVE_GRP_H': 1,
  'HAVE_HSTRERROR': 1,
  'HAVE_HTOLE64': 1,
  'HAVE_IF_NAMEINDEX': 1,
  'HAVE_INET_ATON': 1,
  'HAVE_INET_NTOA': 1,
  'HAVE_INET_PTON': 1,
  'HAVE_INITGROUPS': 1,
  'HAVE_INTTYPES_H': 1,
  'HAVE_KILL': 1,
  'HAVE_KILLPG': 1,
  'HAVE_LANGINFO_H': 1,
  'HAVE_LCHOWN': 1,
  'HAVE_LIBDB': 1,
  'HAVE_LIBDL': 1,
  'HAVE_LIBINTL_H': 1,
  'HAVE_LIBSQLITE3': 1,
  'HAVE_LINK': 1,
  'HAVE_LINKAT': 1,
  'HAVE_LINUX_AUXVEC_H': 1,
  'HAVE_LINUX_CAN_BCM_H': 1,
  'HAVE_LINUX_CAN_H': 1,
  'HAVE_LINUX_CAN_J1939_H': 1,
  'HAVE_LINUX_CAN_RAW_FD_FRAMES': 1,
  'HAVE_LINUX_CAN_RAW_H': 1,
  'HAVE_LINUX_CAN_RAW_JOIN_FILTERS': 1,
  'HAVE_LINUX_FS_H': 1,
  'HAVE_LINUX_LIMITS_H': 1,
  'HAVE_LINUX_MEMFD_H': 1,
  'HAVE_LINUX_NETFILTER_IPV4_H': 1,
  'HAVE_LINUX_NETLINK_H': 1,
  'HAVE_LINUX_QRTR_H': 1,
  'HAVE_LINUX_RANDOM_H': 1,
  'HAVE_LINUX_SOUNDCARD_H': 1,
  'HAVE_LINUX_TIPC_H': 1,
  'HAVE_LINUX_VM_SOCKETS_H': 1,
  'HAVE_LINUX_WAIT_H': 1,
  'HAVE_LISTEN': 1,
  'HAVE_LOCKF': 1,
  'HAVE_LOG1P': 1,
  'HAVE_LOG2': 1,
  'HAVE_LOGIN_TTY': 1,
  'HAVE_LONG_DOUBLE': 1,
  'HAVE_LSTAT': 1,
  'HAVE_LUTIMES': 1,
  'HAVE_MADVISE': 1,
  'HAVE_MAKEDEV': 1,
  'HAVE_MBRTOWC': 1,
  # 'HAVE_MEMFD_CREATE': 1,
  # 'HAVE_MEMRCHR': 1,
  'HAVE_MKDIRAT': 1,
  'HAVE_MKFIFO': 1,
  'HAVE_MKFIFOAT': 1,
  'HAVE_MKNOD': 1,
  'HAVE_MKNODAT': 1,
  'HAVE_MKTIME': 1,
  'HAVE_MMAP': 1,
  # 'HAVE_MREMAP': 1,
  'HAVE_NANOSLEEP': 1,
  'HAVE_NCURSESW': 1,
  'HAVE_NCURSES_H': 1,
  'HAVE_NDBM_H': 1,
  'HAVE_NETDB_H': 1,
  'HAVE_NETINET_IN_H': 1,
  'HAVE_NETPACKET_PACKET_H': 1,
  'HAVE_NET_ETHERNET_H': 1,
  'HAVE_NET_IF_H': 1,
  'HAVE_NICE': 1,
  'HAVE_OPENAT': 1,
  'HAVE_OPENDIR': 1,
  'HAVE_OPENPTY': 1,
  'HAVE_PANELW': 1,
  'HAVE_PANEL_H': 1,
  'HAVE_PATHCONF': 1,
  'HAVE_PAUSE': 1,
  'HAVE_PIPE': 1,
  # 'HAVE_PIPE2': 1,
  'HAVE_POLL': 1,
  'HAVE_POLL_H': 1,
  'HAVE_POSIX_FADVISE': 1,
  'HAVE_POSIX_FALLOCATE': 1,
  'HAVE_POSIX_OPENPT': 1,
  'HAVE_POSIX_SPAWN': 1,
  'HAVE_POSIX_SPAWNP': 1,
  'HAVE_POSIX_SPAWN_FILE_ACTIONS_ADDCLOSEFROM_NP': 1,
  'HAVE_PREAD': 1,
  'HAVE_PREADV': 1,
  # 'HAVE_PREADV2': 1,
  # 'HAVE_PRLIMIT': 1,
  'HAVE_PROCESS_VM_READV': 1,
  'HAVE_PROTOTYPES': 1,
  'HAVE_PTHREAD_CONDATTR_SETCLOCK': 1,
  'HAVE_PTHREAD_GETCPUCLOCKID': 1,
  # 'HAVE_PTHREAD_GETNAME_NP': 1,
  'HAVE_PTHREAD_H': 1,
  'HAVE_PTHREAD_KILL': 1,
  # 'HAVE_PTHREAD_SETNAME_NP': 1,
  'HAVE_PTHREAD_SIGMASK': 1,
  'HAVE_PTSNAME': 1,
  # 'HAVE_PTSNAME_R': 1,
  'HAVE_PTY_H': 1,
  'HAVE_PWRITE': 1,
  'HAVE_PWRITEV': 1,
  # 'HAVE_PWRITEV2': 1,
  'HAVE_READLINK': 1,
  'HAVE_READLINKAT': 1,
  'HAVE_READV': 1,
  'HAVE_REALPATH': 1,
  'HAVE_RECVFROM': 1,
  'HAVE_RENAMEAT': 1,
  'HAVE_RL_APPEND_HISTORY': 1,
  'HAVE_RL_CATCH_SIGNAL': 1,
  'HAVE_RL_COMPDISP_FUNC_T': 1,
  'HAVE_RL_COMPLETION_APPEND_CHARACTER': 1,
  'HAVE_RL_COMPLETION_DISPLAY_MATCHES_HOOK': 1,
  'HAVE_RL_COMPLETION_MATCHES': 1,
  'HAVE_RL_COMPLETION_SUPPRESS_APPEND': 1,
  'HAVE_RL_PRE_INPUT_HOOK': 1,
  'HAVE_RL_RESIZE_TERMINAL': 1,
  'HAVE_SCHED_GET_PRIORITY_MAX': 1,
  'HAVE_SCHED_H': 1,
  'HAVE_SCHED_RR_GET_INTERVAL': 1,
  'HAVE_SCHED_SETAFFINITY': 1,
  'HAVE_SCHED_SETPARAM': 1,
  'HAVE_SCHED_SETSCHEDULER': 1,
  # 'HAVE_SEM_CLOCKWAIT': 1,
  'HAVE_SEM_GETVALUE': 1,
  'HAVE_SEM_OPEN': 1,
  'HAVE_SEM_TIMEDWAIT': 1,
  'HAVE_SEM_UNLINK': 1,
  'HAVE_SENDFILE': 1,
  'HAVE_SENDTO': 1,
  'HAVE_SETEGID': 1,
  'HAVE_SETEUID': 1,
  'HAVE_SETGID': 1,
  'HAVE_SETGROUPS': 1,
  'HAVE_SETHOSTNAME': 1,
  'HAVE_SETITIMER': 1,
  'HAVE_SETJMP_H': 1,
  'HAVE_SETLOCALE': 1,
  # 'HAVE_SETNS': 1,
  'HAVE_SETPGID': 1,
  'HAVE_SETPGRP': 1,
  'HAVE_SETPRIORITY': 1,
  'HAVE_SETREGID': 1,
  # 'HAVE_SETRESGID': 1,
  # 'HAVE_SETRESUID': 1,
  'HAVE_SETREUID': 1,
  'HAVE_SETSID': 1,
  'HAVE_SETSOCKOPT': 1,
  'HAVE_SETUID': 1,
  'HAVE_SETVBUF': 1,
  'HAVE_SHADOW_H': 1,
  'HAVE_SHM_OPEN': 1,
  'HAVE_SHM_UNLINK': 1,
  'HAVE_SHUTDOWN': 1,
  'HAVE_SIGACTION': 1,
  'HAVE_SIGALTSTACK': 1,
  'HAVE_SIGFILLSET': 1,
  'HAVE_SIGINFO_T_SI_BAND': 1,
  'HAVE_SIGINTERRUPT': 1,
  'HAVE_SIGNAL_H': 1,
  'HAVE_SIGPENDING': 1,
  'HAVE_SIGRELSE': 1,
  'HAVE_SIGTIMEDWAIT': 1,
  'HAVE_SIGWAIT': 1,
  'HAVE_SIGWAITINFO': 1,
  'HAVE_SNPRINTF': 1,
  'HAVE_SOCKADDR_ALG': 1,
  'HAVE_SOCKADDR_STORAGE': 1,
  'HAVE_SOCKET': 1,
  'HAVE_SOCKETPAIR': 1,
  'HAVE_SOCKLEN_T': 1,
  'HAVE_SPAWN_H': 1,
  # 'HAVE_SPLICE': 1,
  'HAVE_SSIZE_T': 1,
  'HAVE_STATVFS': 1,
  'HAVE_STAT_TV_NSEC': 1,
  'HAVE_STDINT_H': 1,
  'HAVE_STDIO_H': 1,
  'HAVE_STDLIB_H': 1,
  'HAVE_STD_ATOMIC': 1,
  'HAVE_STRFTIME': 1,
  'HAVE_STRINGS_H': 1,
  'HAVE_STRING_H': 1,
  'HAVE_STRLCPY': 1,
  'HAVE_STRSIGNAL': 1,
  'HAVE_STRUCT_PASSWD_PW_GECOS': 1,
  'HAVE_STRUCT_PASSWD_PW_PASSWD': 1,
  'HAVE_STRUCT_STAT_ST_BLKSIZE': 1,
  'HAVE_STRUCT_STAT_ST_BLOCKS': 1,
  'HAVE_STRUCT_STAT_ST_RDEV': 1,
  'HAVE_STRUCT_TM_TM_ZONE': 1,
  'HAVE_SYMLINK': 1,
  'HAVE_SYMLINKAT': 1,
  'HAVE_SYNC': 1,
  'HAVE_SYSCONF': 1,
  'HAVE_SYSEXITS_H': 1,
  'HAVE_SYSLOG_H': 1,
  'HAVE_SYSTEM': 1,
  'HAVE_SYS_AUXV_H': 1,
  'HAVE_SYS_EPOLL_H': 1,
  'HAVE_SYS_EVENTFD_H': 1,
  'HAVE_SYS_FILE_H': 1,
  'HAVE_SYS_IOCTL_H': 1,
  'HAVE_SYS_MMAN_H': 1,
  'HAVE_SYS_PARAM_H': 1,
  'HAVE_SYS_PIDFD_H': 1,
  'HAVE_SYS_POLL_H': 1,
  'HAVE_SYS_RANDOM_H': 1,
  'HAVE_SYS_RESOURCE_H': 1,
  'HAVE_SYS_SELECT_H': 1,
  'HAVE_SYS_SENDFILE_H': 1,
  'HAVE_SYS_SOCKET_H': 1,
  'HAVE_SYS_SOUNDCARD_H': 1,
  'HAVE_SYS_STATVFS_H': 1,
  'HAVE_SYS_STAT_H': 1,
  'HAVE_SYS_SYSCALL_H': 1,
  'HAVE_SYS_SYSMACROS_H': 1,
  'HAVE_SYS_TIMERFD_H': 1,
  'HAVE_SYS_TIMES_H': 1,
  'HAVE_SYS_TIME_H': 1,
  'HAVE_SYS_TYPES_H': 1,
  'HAVE_SYS_UIO_H': 1,
  'HAVE_SYS_UN_H': 1,
  'HAVE_SYS_UTSNAME_H': 1,
  'HAVE_SYS_WAIT_H': 1,
  'HAVE_SYS_XATTR_H': 1,
  'HAVE_TCGETPGRP': 1,
  'HAVE_TCSETPGRP': 1,
  'HAVE_TEMPNAM': 1,
  'HAVE_TERMIOS_H': 1,
  'HAVE_TERM_H': 1,
  'HAVE_TIMEGM': 1,
  'HAVE_TIMERFD_CREATE': 1,
  'HAVE_TIMES': 1,
  'HAVE_TMPFILE': 1,
  'HAVE_TMPNAM': 1,
  'HAVE_TMPNAM_R': 1,
  'HAVE_TM_ZONE': 1,
  'HAVE_TRUNCATE': 1,
  'HAVE_TTYNAME': 1,
  'HAVE_UMASK': 1,
  'HAVE_UNAME': 1,
  'HAVE_UNISTD_H': 1,
  'HAVE_UNLINKAT': 1,
  'HAVE_UNLOCKPT': 1,
  # 'HAVE_UNSHARE': 1,
  'HAVE_UTIMENSAT': 1,
  'HAVE_UTIMES': 1,
  'HAVE_UTIME_H': 1,
  'HAVE_UTMP_H': 1,
  'HAVE_UUID_GENERATE_TIME_SAFE': 1,
  'HAVE_UUID_H': 1,
  'HAVE_VFORK': 1,
  'HAVE_WAIT': 1,
  'HAVE_WAIT3': 1,
  'HAVE_WAIT4': 1,
  'HAVE_WAITID': 1,
  'HAVE_WAITPID': 1,
  'HAVE_WCHAR_H': 1,
  'HAVE_WCSCOLL': 1,
  'HAVE_WCSFTIME': 1,
  'HAVE_WCSXFRM': 1,
  'HAVE_WMEMCMP': 1,
  'HAVE_WORKING_TZSET': 1,
  'HAVE_WRITEV': 1,
  'HAVE_ZLIB_COPY': 1,
  'HAVE___UINT128_T': 1,
  'MAJOR_IN_SYSMACROS': 1,
  'MVWDELCH_IS_EXPRESSION': 1,
  'PTHREAD_KEY_T_IS_COMPATIBLE_WITH_INT': 1,
  'PTHREAD_SYSTEM_SCHED_SUPPORTED': 1,
  'PYTHREAD_NAME_MAXLEN': 15,
  'PY_BUILTIN_HASHLIB_HASHES': '"md5,sha1,sha2,sha3,blake2"',
  'PY_COERCE_C_LOCALE': 1,
  'PY_HAVE_PERF_TRAMPOLINE': 1,
  'PY_SQLITE_HAVE_SERIALIZE': 1,
  'PY_SSL_DEFAULT_CIPHERS': 1,
  'PY_SUPPORT_TIER': 1,
  'Py_FFI_SUPPORT_C_COMPLEX': 1,
  'Py_HAVE_C_COMPLEX': 1,
  'Py_NORMALIZE_CENTURY': 1,
  'Py_STRFTIME_C99_SUPPORT': 1,
  'RETSIGTYPE': 'void',
  'SIZEOF_DOUBLE': 8,
  'SIZEOF_FLOAT': 4,
  'SIZEOF_FPOS_T': 16,
  'SIZEOF_INT': 4,
  'SIZEOF_LONG': 8,
  'SIZEOF_LONG_DOUBLE': 16,
  'SIZEOF_LONG_LONG': 8,
  'SIZEOF_OFF_T': 8,
  'SIZEOF_PID_T': 4,
  'SIZEOF_PTHREAD_KEY_T': 4,
  'SIZEOF_PTHREAD_T': 8,
  'SIZEOF_SHORT': 2,
  'SIZEOF_SIZE_T': 8,
  'SIZEOF_TIME_T': 8,
  'SIZEOF_UINTPTR_T': 8,
  'SIZEOF_VOID_P': 8,
  'SIZEOF_WCHAR_T': 4,
  'SIZEOF__BOOL': 1,
  'STDC_HEADERS': 1,
  'SYS_SELECT_WITH_SYS_TIME': 1,
  'WITH_DECIMAL_CONTEXTVAR': 1,
  'WITH_DOC_STRINGS': 1,
  'WITH_MIMALLOC': 1,
  'WITH_PYMALLOC': 1,
  '_DARWIN_C_SOURCE': 1,
  '_FILE_OFFSET_BITS': 64,
  '_LARGEFILE_SOURCE': 1,
  '_NETBSD_SOURCE': 1,
  '_POSIX_C_SOURCE': '200809L',
  '_PYTHONFRAMEWORK': '""',
  '_REENTRANT': 1,
  # '_XOPEN_SOURCE': 700,
  '_XOPEN_SOURCE_EXTENDED': 1,
  '__BSD_VISIBLE': 1,
})
